<resources>
    <string name="app_name">HTF</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">something went wrong</string>
    <string name="logged_in">logged in</string>
    <string name="registered">user registered</string>
    <string name="empty" />
    <string name="wait_please">Wait please...</string>
    <string name="create_account">CREATE NEW ACCOUNT</string>
    <string name="already_got_account">Already have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">E-mail</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="password_is_short">Password is less than 6 symbols</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="skill_1">Developer</string>
    <string name="skill_2">Graphic Design</string>

    <style name="skill_3">Advertising</style>

    <string name="users_db">users</string>
    <string name="app_name_full">Hackatons</string>
    <string name="check_sign_in">Checking sign in...</string>
    <string name="hint_full_name">Full name</string>
    <string name="lbl_continue">CONTINUE</string>
    <string name="welcome_label">Let’s start by getting to know you better</string>
    <string name="developer">Developer</string>
    <string name="designer">Designer</string>
    <string name="product">Product</string>
    <string name="other">Other</string>
    <string name="request_failed">Request failed</string>
    <string name="please_select_profession">Please select profession</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="pick_up_skills">Now pick up a few skills</string>
    <string name="lbl_start">LET’S START</string>
    <string name="ui_ux"><![CDATA[UI & UX]]></string>
    <string name="graphic_design">Graphic design</string>
    <string name="photography">Photography</string>
    <string name="interaction_design">Interaction design</string>
    <string name="advertising">Advertising</string>
    <string name="illustration">Illustration</string>
    <string name="industriak_design">Industrial design</string>
    <string name="motion_graphic">Motion graphics</string>
    <string name="web_design">Web design</string>
    <string name="architecture">Architecture</string>
    <string name="animator">Animator</string>
    <string name="you_just_got">You just got</string>
    <string name="Hacked">Hacked</string>
    <string name="search_for_other_groups">search for other groups</string>
    <string name="lynx_want_you_to_be_a_team_member">LYNX want you to be a team member</string>
    <string name="EXPLORE_TEAM">EXPLORE TEAM</string>
    <string name="x">X</string>
</resources>
